@@ -13,6 +13,7 @@
 #include "staptree.h"
 #include "elaborate.h"
 #include "stringtable.h"
+#include "dwflpp.h"
 
 void check_process_probe_kernel_support(systemtap_session& s);
 
@@ -109,6 +110,23 @@ private:
   std::stack<functioncall**> target_symbol_setter_functioncalls;
   bool rewrite_lvalue(const token *tok, interned_string& eop,
                       expression*& lvalue, expression*& rvalue);
+};
+
+// ------------------------------------------------------------------------
+
+struct exp_type_dwarf : public exp_type_details
+{
+  // NB: We don't own this dwflpp, so don't use it after build_no_more!
+  // A shared_ptr might help, but expressions are currently so leaky
+  // that we'd probably never clear all references... :/
+  dwflpp* dw;
+  Dwarf_Die die;
+  bool userspace_p;
+  bool is_pointer;
+  exp_type_dwarf(dwflpp* dw, Dwarf_Die* die, bool userspace_p, bool addressof);
+  uintptr_t id () const { return reinterpret_cast<uintptr_t>(die.addr); }
+  bool expandable() const { return true; }
+  functioncall *expand(autocast_op* e, bool lvalue);
 };
 
 #endif // TAPSETS_H
